# blog

./: CLAUDE.md
.githooks/: pre-commit
2026/05/batched-md/: blog.md  modal_workflow.py  plot_workflow.py  pyproject.toml
2026/05/batched-md/batched_md/: workflow_benchmark.py
2026/06/d3-dispersion/: blog.md
2026/06/doclang/: blog.md  pyproject.toml
